--- a/ckanext/tour/assets/css/style.css
+++ b/ckanext/tour/assets/css/style.css
@@ -40,8 +40,8 @@
   margin-right: auto;
 }
 .accordion.tour-accordion .accordion-header .accordion-header--text .step-number {
-  border: 1px solid black;
-  color: black;
+  border: 1px solid var(--ap-color);
+  color: var(--ap-color);
   padding: 5px 11px;
   border-radius: 50%;
 }
@@ -138,6 +138,10 @@
   background-image: none;
   text-decoration: none;
   pointer-events: none;
+}
+
+body[admin-panel=true] .tour-accordion .image-upload #field-image-upload {
+  width: 100px;
 }
 
 /*# sourceMappingURL=style.css.map */
