style: update image width, update table layout

--- a/ckanext/tour/assets/css/style.css
+++ b/ckanext/tour/assets/css/style.css
@@ -81,6 +81,7 @@
 .shepherd-element.tour-step .shepherd-content .shepherd-text img {
   max-width: 100%;
   height: auto;
+  width: -webkit-fill-available;
 }
 .shepherd-element.tour-step .shepherd-content .shepherd-stats {
   text-align: center;
