--- a/ckanext/tour/theme/elements.scss
+++ b/ckanext/tour/theme/elements.scss
@@ -104,6 +104,7 @@
             img {
                 max-width: 100%;
                 height: auto;
+                width: -webkit-fill-available;
             }
         }
 
